<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShutdownTool</string>
    <string name="ip_message">Enter the IP address of the machine.</string>
    <string name="port_message">Port</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="restart_button">Restart</string>
    <string name="shutdown_button">Shutdown</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_shutdown">DisplayShutdownActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_text">Actions Available</string>
</resources>
